Fixed the logout button z-index bug

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -110,6 +110,7 @@ p {
   height: 50px;
   line-height: 50px;
   padding-left: 20px;
+  z-index: 111111;
 }
 
 /* submenu (content|pages|files|url) */
